--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,4 +1,8 @@
+body {
+    margin: 0px;
+    padding: 0px;
 
+}
 /* Header Section */
 
 .head {
@@ -7,14 +11,15 @@
   height: 80px;
   position: fixed;
   z-index: 1;
+  background-color: white;
   align-items: center;
   display: flex;
   justify-content: space-between;
   font-family: Verdana;
   font-size: 14px;
   font-weight: bold;
-  flex-grow: 1;
-  }
+  flex-shrink: 1;
+    }
 
 
 .logo {
@@ -22,17 +27,115 @@
   align-items: center;
   color: MediumAquamarine;
   padding-left: 20px;
+  padding-right: 69.5%;
+  flex-shrink: 2;
+
+
   }
 
-.nav a{
-    justify-content: flex-end;
+nav a{
+
     color: black;
     padding-right: 10px;
+
     }
-.nav {
-  margin-right: 40px;
+nav {
+
+    margin: 30px;
+    flex-shrink: 2;
+
+
+  }
+
+span.logo {
+  padding-left: 10px;
+  margin-left: 10px;
 }
 
-span {
-  padding-left: 10px;
+/* Main Content Section */
+
+.content {
+  display: flex;
+  padding-top: 116px;
+  width: 1232px;
+  margin: 0 auto 25px auto;
+  justify-content: space-around;
+
+
+}
+
+
+.large {
+  width: 630px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.story {
+  width: 315px;
+}
+
+.medium {
+  width: 300px;
+
+}
+
+.small {
+  width: 240px;
+
+}
+
+.main {
+  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-main.png");
+  height: 300px;
+  width: 630px;
+}
+
+.earth {
+  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-2.png");
+  height: 300px;
+  width: 300px;
+}
+
+.hipster {
+  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-3.png");
+  height: 300px;
+  width: 300px;
+}
+
+.cat {
+  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-1.png");
+  height: 300px;
+}
+
+span.label {
+  font-family: Georgia;
+  font-weight: bold;
+  font-size: 30px;
+  color: white;
+  }
+
+
+.main span {
+  font-size: 40px;
+  width: 630px;
+  }
+
+.story.lead {
+  font-family: Georgia;
+  font-size: 17px;
+  color: black;
+}
+
+.stories {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-top: 17px;
+}
+
+.orca,
+.burger {
+  height: 250px;
+  width: 300px;
 }
