--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -30,7 +30,6 @@ body {
   padding-right: 69.5%;
   flex-shrink: 2;
 
-
   }
 
 nav a{
@@ -82,6 +81,9 @@ span.logo {
 
 .small {
   width: 240px;
+  display: flex;
+  flex-direction: column;
+
 
 }
 
@@ -139,3 +141,59 @@ span.label {
   height: 250px;
   width: 300px;
 }
+
+.news {
+margin-bottom: 41px;
+font-size: 16px;
+font-weight: bold;
+text-align: center;
+}
+
+.bite {
+display: block;
+padding: 11px 20px;
+border-bottom: 1px solid black;
+background-color: WhiteSmoke;
+font-family: Verdana;
+font-size: 12px;
+color: DimGray;
+}
+
+/* Footer Section*/
+
+footer {
+  background-color: MediumAquamarine;
+  margin: auto;
+  font-family: Verdana;
+  font-size: 12px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 325px;
+  align-items: center;
+  justify-content: center;
+}
+
+.title {
+  display: inline-block;
+  padding-right: 25px;
+  border-right: 2px solid white;
+  font-family: Georgia;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+}
+
+footer nav{
+  display: inline-block;
+  padding-left: 25px;
+  
+
+    }
+
+
+
+.copyright {
+  display: block;
+  padding-right: 25px
+  }
